--- a/html/sass/components/_ui-slider.scss
+++ b/html/sass/components/_ui-slider.scss
@@ -1,7 +1,7 @@
 .ui-slider{
   position: relative; width: 100%;
   .ui-slides{ position: relative; overflow: hidden; width: 100%; height: 100%; }
-  .ui-slide{ width: 100%; position: absolute; left: 0; top: 0; height: 100% }
+  .ui-slide{ width: 100%; position: absolute; left: 0; top: 0; height: 100%; overflow: hidden }
   .arrows{
     position: absolute; bottom: 0; right:0; z-index: 30;
     a {
@@ -115,5 +115,17 @@
            }
       }
   }
+}
 
+
+html.webkit .ui-slide{ overflow: visible }
+
+html.ie9 .ui-slider{
+  &.type-cities{
+    .ui-slide { width: 17% }
+  }
+
+  &.type-bestof{
+    .ui-slide { width: 33.7% }
+  }
 }
